--- a/client/templates/dashboard/dashboard.html
+++ b/client/templates/dashboard/dashboard.html
@@ -1,14 +1,77 @@
 <template name="dashboard">
-  <div class="template-dashboard">
-    <div class="page-header">
-      <h1>Dashboard</h1>
+    <div class="template-dashboard">
+        <div class="page-header">
+            <h1>My Meetups</h1>
+        </div>
+        
+        <ul class="list-group">
+            {{#each mymeetups}}
+                <li class="list-group-item"><a data-toggle="modal" data-target="#modal{{_id}}">{{ title }}</a> <span class="label label-default">{{city}}, {{state}}</span> <a id="{{_id}}" class="pull-right remove-meetup"><i class="fa fa-remove"></i></a></li>
+                <!-- Modal -->
+                <div class="modal fade" id="modal{{_id}}" tabindex="-1" role="dialog" aria-labelledby="modal{{_id}}Label">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="modal{{_id}}Label">Edit Meetup</h4>
+                            </div>
+                            <div class="modal-body">
+                                <form class="update-meetup-form">
+                                    <div class="form-group">
+                                        <label>Meetup Title</label>
+                                        <input type="text" class="form-control" id="title" name="title" value="{{title}}" />
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Contact Email</label>
+                                        <input type="email" class="form-control" id="email" name="email" value="{{email}}" />
+                                    </div><div class="form-group">
+                                        <label>Topics</label>
+                                        <input type="text" class="form-control" id="topics" name="topics" value="{{topics}}" />
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Type</label>
+                                        <select id="type" name="type" class="form-control">
+                                            <option value="public">Public</option>
+                                            <option value="private">Private</option>
+                                            <option value="invite">Invite Only</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Meetup Date</label>
+                                        <div class="input-group datetimepicker">
+                                            <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                            <input type="text" class="set-due-date form-control" id="meetupdate" name="meetupdate" value="{{meetupdate}}" />
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Address</label>
+                                        <input type="text" class="form-control" id="address" name="address" value="{{address}}">
+                                    </div>
+                                    <div class="form-group">
+                                        <label>City</label>
+                                        <input type="text" class="form-control" id="city" name="city" value="{{city}}">
+                                    </div><div class="form-group">
+                                        <label>State</label>
+                                        <input type="text" class="form-control" id="state" name="state" value="{{state}}">
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Zip Code</label>
+                                        <input type="text" class="form-control" id="zipcode" name="zipcode" value="{{zipcode}}">
+                                    </div>
+                                    <input type="hidden" name="id" id="id" value="{{_id}}">
+                                    <button type="submit" class="btn btn-primary">Update Meetup</button>
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </form>
+                                <p class="well">Posted By: {{username}}</p>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            {{else}}
+                <p>You currently have no meetups</p>
+            {{/each}}
+        </ul>
+        
     </div>
-
-    <ul class="list-group">
-      {{#each items}}
-        <li class="list-group-item">{{ name }} <span class="label label-default">{{ rating }}</span></li>
-      {{/each}}
-    </ul>
-
-  </div>
 </template>
